# livebox-bypass-cli

./: .editorconfig  Cargo.toml  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build-release.yml  build.yml  dependency-submission.yml  gradle-publish.yml  tag-from-cargo.yml  test.yml
src/: cli.rs  config.rs  lib.rs  main.rs
src/api/: livebox_client.rs  mod.rs  models.rs
src/commands/: generate.rs
src/formatters/: hex_formatter.rs  mod.rs  output_formatter.rs
src/generators/: authentication.rs  authentication_generator.rs  mod.rs
src/main/java/fr/hequin0x/liveboxbypasscli/command/: AuthenticatedCommand.java  BaseAuthenticatedCommand.java  DefaultCommand.java  GenerateDHCPCommand.java  GenerateGPONCommand.java  WanLinkTypeCommand.java
src/main/java/fr/hequin0x/liveboxbypasscli/command/formatting/: FormattableOutput.java
src/main/java/fr/hequin0x/liveboxbypasscli/command/generate/: GenerateAuthenticationCommand.java  (+4 more)
src/main/java/fr/hequin0x/liveboxbypasscli/configuration/: AuthenticationGeneratorConfiguration.java
src/main/java/fr/hequin0x/liveboxbypasscli/provider/: AppVersionProvider.java  LiveboxAuthRequestFilter.java
src/main/java/fr/hequin0x/liveboxbypasscli/security/: LiveboxAuthSession.java
src/main/java/fr/hequin0x/liveboxbypasscli/service/: AuthenticationGeneratorService.java  LiveboxService.java
src/main/java/fr/hequin0x/liveboxbypasscli/util/: FormatterUtils.java  OutputFormatter.java
src/main/resources/: application-dev.yml  application-prod.yml  application.yml
src/renderers/: authentication.rs  dhcp.rs  gpon.rs  mod.rs  options.rs
src/test/java/fr/hequin0x/liveboxbypasscli/extension/: WireMockExtensions.java
src/test/java/fr/hequin0x/liveboxbypasscli/service/: AuthenticationGeneratorServiceTest.java  LiveboxServiceTest.java
tests/: authentication.rs  authentication_generator.rs  livebox_client.rs  option_transforms.rs
(+30 files in other folders)
