[package]
name = "livebox-bypass-cli"
version = "1.0.0"
edition = "2024"
description = "Generate DHCP and GPON configuration for bypassing Orange Livebox"
authors = ["Hequin0x"]
license = "GPL-3.0"
repository = "https://github.com/Hequin0x/livebox-bypass-cli"

[profile.release]
strip = "symbols"
lto = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "env"] }
dialoguer = "0.12"
hex = "0.4"
md5 = "0.8"
owo-colors = "4.3"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.5"
shadow-rs = { version = "1.7", default-features = false }

[build-dependencies]
shadow-rs = "1.7"

[dev-dependencies]
mockito = "1.7"
